again-service/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: again-service
  labels:
    app: again-service
spec:
  selector:
    matchLabels:
      app: again-service
  template:
    metadata:
      labels:
        app: again-service
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - name: again-service
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
          name: "http2-8080"
        readinessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /health
            port: 8080
        livenessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /health
            port: 8080
