again-service/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: again-service
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: http2
  selector:
    app: again-service
