again-service/k8s/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: again-service-ingress
  labels:
    app: again-service
spec:
  hosts: []
  gateways:
    - ingressgateway.istio-system
  http:
  - match:
    - uri:
        exact: "/"
    route:
    - destination:
        host: again-service
        port:
          number: 8080
